
    S2GRAPH-19: When query with duration error (Committed by DOYUNG YOON).
    
    S2GRAPH-63: Condition on partition strong edges and weak edges on mutateEdges is wrong (Committed by DOYUNG YOON).
   
    S2GRAPH-65: Deferred produce exception (Committed by DOYUNG YOON).

    S2GRAPH-64: incrementCounts yield type case exception (Committed by DOYUNG YOON).

  TASKS

    S2GRAPH-2: Update document and quick start environment to have recent set-up command changes.
               (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by daewon)

    S2GRAPH-5: Add Apache RAT to valid LICENSE errors. (Committed by DOYUNG YOON).

    S2GRAPH-17: Remove unnecessary abstraction layer, Storage. (Committed by DOYUNG YOON).
    
    S2GRAPH-57: Change package names into org.apahce.s2graph. (Committed by DOYUNG YOON).

    S2GRAPH-4: Update license headers in source codes. (Committed by DOYUNG YOON).
    
    S2GRAPH-61: Update README.md to have Apache mailing list. 
		(Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
	
    S2GRAPH-71: Missing resolver in plugin settings.
                (Contributed by Injun Song<ijsong@gmail.com>, committed by DOYUNG YOON)

    S2GRAPH-30: Typo in README. (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON).

    S2GRAPH-105: remove the full path on packaged tarball (Committed by Sergio Fernández).

  SUB TASKS

    S2GRAPH-9: Provide rest server using netty. (Committed by daewon).

    S2GRAPH-7: Abstract common codes for rest project into s2core. (Committed by daewon).

    S2GRAPH-31: Remove playframework dependencies on s2core/build.sbt. (Committed by DOYUNG YOON).
    
    S2GRAPH-69: Change IndexEdge's props data type. (Committed by DOYUNG YOON).

    S2GRAPH-87: LICENSE file should be changed. (Committed by Sergio Fernández).
   
    S2GRAPH-73: Add an SBT task and relevant scripts to construct a package for distribution.